@@ -1,5 +1,6 @@
 package br.com.kbmg.wsmusiccontrol.event.listener;
 
+import br.com.kbmg.wsmusiccontrol.enums.SpaceStatusEnum;
 import br.com.kbmg.wsmusiccontrol.event.OnSpaceApproveEvent;
 import br.com.kbmg.wsmusiccontrol.exception.ServiceException;
 import br.com.kbmg.wsmusiccontrol.model.Space;
@@ -10,7 +11,9 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.ApplicationListener;
 import org.springframework.stereotype.Component;
 
-import java.util.Arrays;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 @Component
 @Slf4j
@@ -28,31 +31,29 @@ public class SpaceApproveListener
 
     private void spaceRequest(OnSpaceApproveEvent event) {
         Space space = event.getData();
-        String subject = messagesService.get("space.approve.subject");
+        String subject = messagesService.get("space.approve.subject").concat(" " + space.getName());
 
         UserApp requestedBy = space.getRequestedBy();
         UserApp approvedBy = space.getApprovedBy();
         validateRequestedByAndApprovedBy(requestedBy, approvedBy);
 
-        String[] to = Arrays.asList(requestedBy.getEmail(), approvedBy.getEmail()).toArray(String[]::new);
-        String html = "<html>\n" +
-                "<body>\n" +
-                "<h1>Solicitado por: " + requestedBy.getName() + " (" + requestedBy.getEmail() + ")" + "</h1>\n" +
-                "<br>\n" +
-                "<br>\n" +
-                "<p>Nome: " + space.getName() + " - Justificativa: " +  space.getJustification() + "</p>\n" +
-                "<br>\n" +
-                "<br>\n" +
-                "<p>Aprovado por: " + approvedBy.getName() + " (" + approvedBy.getEmail() + ")" + "</p>\n" +
-                "</body>\n" +
-                "</html>";
+        String[] to = List.of(requestedBy.getEmail()).toArray(String[]::new);
 
-        super.sendEmail(to, subject, html, "user.email.space.approve.failed.send");
+        Map<String, String> data = new HashMap<>();
+        data.put("userName", requestedBy.getName());
+        data.put("spaceName", space.getName());
+
+        sendEmailToUserRequested(space, subject, to, data);
+    }
+
+    private void sendEmailToUserRequested(Space space, String subject, String[] to, Map<String, String> data) {
+        String templateName = SpaceStatusEnum.APPROVED.equals(space.getSpaceStatus()) ? "spaceRequestResultApproved" : "spaceRequestResultNegate";
+        super.sendEmailFreeMarker(to, subject, templateName, data, "user.email.space.approve.failed.send");
     }
 
     private void validateRequestedByAndApprovedBy(UserApp requestedBy, UserApp approvedBy) {
         if (requestedBy == null || approvedBy == null) {
-            throw new ServiceException(messagesService.get("user.email.space.approve.failed.send"));
+            throw new ServiceException("'requestedBy' and 'approvedBy' required");
         }
     }
 }
